--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
-    "@types/react": "^16.13.1",
-    "@types/react-native": "^0.63.2",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.1.2",
     "prettier": "^1.19.1",
-    "typescript": "^4.0.3"
+    "typescript": "~4.0.0"
   },
   "private": true
 }
